--- a/Machine Learning/Main.xaml
+++ b/Machine Learning/Main.xaml
@@ -75,13 +75,13 @@
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:ExcelApplicationScope Password="{x:Null}" DisplayName="Excel Application Scope" sap:VirtualizedContainerService.HintSize="1210.4,4961.6" sap2010:WorkflowViewState.IdRef="ExcelApplicationScope_6" WorkbookPath="Book1.xlsx">
+      <ui:ExcelApplicationScope Password="{x:Null}" DisplayName="Excel Application Scope" sap:VirtualizedContainerService.HintSize="1210.4,5094.4" sap2010:WorkflowViewState.IdRef="ExcelApplicationScope_6" WorkbookPath="Book1.xlsx">
         <ui:ExcelApplicationScope.Body>
           <ActivityAction x:TypeArguments="ui:WorkbookApplication">
             <ActivityAction.Argument>
               <DelegateInArgument x:TypeArguments="ui:WorkbookApplication" Name="ExcelWorkbookScope" />
             </ActivityAction.Argument>
-            <Sequence sap:VirtualizedContainerService.HintSize="1176.8,4852" sap2010:WorkflowViewState.IdRef="Sequence_14">
+            <Sequence sap:VirtualizedContainerService.HintSize="1176.8,4984.8" sap2010:WorkflowViewState.IdRef="Sequence_14">
               <Sequence.Variables>
                 <Variable x:TypeArguments="x:String" Name="Xmat" />
                 <Variable x:TypeArguments="x:String" Name="QBed" />
@@ -94,7 +94,7 @@
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <Sequence sap:VirtualizedContainerService.HintSize="1135.2,1749.6" sap2010:WorkflowViewState.IdRef="Sequence_11">
+              <Sequence sap:VirtualizedContainerService.HintSize="1135.2,1882.4" sap2010:WorkflowViewState.IdRef="Sequence_11">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -111,7 +111,7 @@
                   <ui:ExcelInsertDeleteColumns DisplayName="Insert/Delete Columns" sap:VirtualizedContainerService.HintSize="200,22.4" sap2010:WorkflowViewState.IdRef="ExcelInsertDeleteColumns_1" Mode="Add" NoColumns="100" Position="1" SheetName="Sheet1" />
                   <ui:ExcelInsertDeleteRows DisplayName="Insert/Delete Rows" sap:VirtualizedContainerService.HintSize="200,22.4" sap2010:WorkflowViewState.IdRef="ExcelInsertDeleteRows_1" Mode="Add" NoRows="100" Position="1" SheetName="Sheet1" />
                 </Sequence>
-                <Sequence DisplayName="Input" sap:VirtualizedContainerService.HintSize="944,1439.2" sap2010:WorkflowViewState.IdRef="Sequence_7">
+                <Sequence DisplayName="Input" sap:VirtualizedContainerService.HintSize="944,1572" sap2010:WorkflowViewState.IdRef="Sequence_7">
                   <Sequence.Variables>
                     <Variable x:TypeArguments="x:String" Name="Bedrooms" />
                     <Variable x:TypeArguments="x:String" Name="Bathrooms" />
@@ -146,9 +146,9 @@
                       <OutArgument x:TypeArguments="x:String">[useCSV]</OutArgument>
                     </ui:InputDialog.Result>
                   </ui:InputDialog>
-                  <If Condition="[useCSV = (&quot;Yes&quot;)]" sap:VirtualizedContainerService.HintSize="902.4,818.4" sap2010:WorkflowViewState.IdRef="If_1">
+                  <If Condition="[useCSV = (&quot;Yes&quot;)]" sap:VirtualizedContainerService.HintSize="902.4,951.2" sap2010:WorkflowViewState.IdRef="If_1">
                     <If.Then>
-                      <Sequence DisplayName="CSV Populate Matrix" sap:VirtualizedContainerService.HintSize="375.2,668.8" sap2010:WorkflowViewState.IdRef="Sequence_23">
+                      <Sequence DisplayName="CSV Populate Matrix" sap:VirtualizedContainerService.HintSize="375.2,801.6" sap2010:WorkflowViewState.IdRef="Sequence_23">
                         <Sequence.Variables>
                           <Variable x:TypeArguments="sd:DataTable" Name="dataTable" />
                           <Variable x:TypeArguments="sd:DataTable" Name="outDat" />
@@ -191,7 +191,12 @@
                             </Assign>
                           </Sequence>
                         </DoWhile>
-                        <ui:ReadCsvFile Encoding="{x:Null}" DataTable="[dataTable]" Delimitator="Comma" DisplayName="Read CSV" FilePath="trainA.csv" sap:VirtualizedContainerService.HintSize="333.6,155.2" sap2010:WorkflowViewState.IdRef="ReadCsvFile_1" IncludeColumnNames="False" />
+                        <ui:InputDialog Title="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="333.6,92.8" sap2010:WorkflowViewState.IdRef="InputDialog_13" IsPassword="False" Label="What CSV file are you using?" Options="[{&quot;trainA&quot;,&quot;trainB&quot;,&quot;trainC&quot;}]">
+                          <ui:InputDialog.Result>
+                            <OutArgument x:TypeArguments="x:String">[csvName]</OutArgument>
+                          </ui:InputDialog.Result>
+                        </ui:InputDialog>
+                        <ui:ReadCsvFile Encoding="{x:Null}" DataTable="[dataTable]" Delimitator="Comma" DisplayName="Read CSV" FilePath="[csvName+&quot;.csv&quot;]" sap:VirtualizedContainerService.HintSize="333.6,155.2" sap2010:WorkflowViewState.IdRef="ReadCsvFile_1" IncludeColumnNames="False" />
                         <ui:FilterDataTable DataTable="[dataTable]" DisplayName="Filter Data Table" sap:VirtualizedContainerService.HintSize="333.6,60" sap2010:WorkflowViewState.IdRef="FilterDataTable_1" OutputDataTable="[outDat]" SelectColumnsMode="Keep">
                           <ui:FilterDataTable.Filters>
                             <scg:List x:TypeArguments="ui:FilterOperationArgument" Capacity="4">
